<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/editMeetingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/edit_meeting_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="35"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/edit_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/buttonContinue"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/main_continue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/ic_dial_in"
        android:tint="?android:attr/textColorPrimary" />

    <ProgressBar
        android:id="@+id/progressAuthentication"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/version_prefix"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonDebugSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/design_default_color_surface"
        android:text="@string/main_debug_settings"
        android:textColor="@color/colorText"
        android:textSize="12sp" />


</LinearLayout>