<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/transcriptionConfiguration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/live_transcription_configuration_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transcriptionConfigurationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/live_transcription_configuration_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Spinner
                android:id="@+id/spinnerTranscribeEngine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/transcribe_engine_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/language_setting_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp" />

            <Spinner
                android:id="@+id/spinnerRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/region_setting_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp" />

            <CheckBox
                android:id="@+id/checkboxIdentifyLanguage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:button="@null"
                android:contentDescription="@string/identify_language_checkbox"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:minHeight="48dp"
                android:paddingStart="40dp"
                android:paddingEnd="20dp"
                android:text="@string/identify_language_checkbox"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewLanguageOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:enabled="true"
                android:paddingStart="39dp"
                android:paddingEnd="32dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinnerPreferredLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/preferred_language_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:visibility="gone"
                />

            <Spinner
                android:id="@+id/spinnerPartialResultsStabilization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/partial_stability_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp" />

            <Spinner
                android:id="@+id/spinnerPIIContentIdentification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/identification_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp" />

            <Spinner
                android:id="@+id/spinnerPIIContentRedaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/redaction_spinner"
                android:minHeight="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp" />

            <CheckBox
                android:id="@+id/checkboxPHIContentIdentification"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:minHeight="48dp"
                android:paddingStart="40dp"
                android:paddingEnd="20dp"
                android:visibility="gone"
                android:text="@string/phi_identification_checkbox"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkboxCustomLanguageModel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:button="@null"
                android:contentDescription="@string/custom_language_checkbox"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:minHeight="48dp"
                android:paddingStart="40dp"
                android:paddingEnd="20dp"
                android:text="@string/custom_language_checkbox"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextCustomLanguageModel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/custom_language_model_text_view"
                android:background="@color/colorWhite"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textAlignment="viewStart"
                android:cursorVisible="false"
                android:visibility="gone"
                android:textSize="16sp"
                android:paddingStart="40dp"
                android:paddingEnd="20dp" />
            <Button
                android:id="@+id/buttonStartTranscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/start_transcription"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/start_transcription" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
