<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewMeetingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/buttonMetrics"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/buttonMetrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:contentDescription="@string/toggle_metrics"
            android:src="@drawable/button_more_actions" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/noVideoOrScreenShareAvailable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_videos_available"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewVideoCollection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/video_view"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewScreenShareCollection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/screen_share_view"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMetrics"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#E6FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRoster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#E6FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/buttonMute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_mute"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_mute"
            android:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonSpeaker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/speaker_button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_speaker"
            android:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_camera"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_camera"
            android:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_screen"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_screen_share"
            android:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonAttendeesList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_attendees_list"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_attendees_list"
            android:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonLeave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/meeting_leave"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_end"
            android:tint="#F44336" />

    </LinearLayout>

</LinearLayout>
